--- a/nginx/latest/stack.yml
+++ b/nginx/latest/stack.yml
@@ -1,7 +1,11 @@
 version: '3'
 
 services:
-    app:
+    app1:
         image: nginx
         ports: 
             - "8090:80"
+    app2:
+        image: nginx
+        ports: 
+            - "8091:80"
